# samuelstanton.github.io

./: .buildinfo  .gitignore  DEPLOYMENT.html  LICENSE  README.html  README.md  _config.yml  _toc.yml  archive.html  bio.html  bio.md  conf.py  genindex.html  index.html  index.rst  objects.inv  pubs.html  pubs.md  pyproject.toml  robots.txt  rss.xml  search.html  searchindex.js  sitemap.xml  sitemapindex.xml
.github/workflows/: deploy.yml
2012/: index.html
2020/: index.html
2021/: index.html
_build/.doctrees/: DEPLOYMENT.doctree  README.doctree  bio.doctree  environment.pickle  index.doctree  pubs.doctree
_build/html/: .buildinfo  DEPLOYMENT.html  README.html  genindex.html  objects.inv  pubs.html  searchindex.js
_sources/: README.md  index.md
_sources/blog/: focus-groups-and-academic-reviews.md
_sources/jupyter-book/: bio.md
authors/: index.html  roberto-alsina.xml  sam-stanton.xml
bio/: index.html  index.rst
blog/: ec2_scaling_with_hydra.html  ec2_scaling_with_hydra.ipynb  focus-groups-and-academic-reviews.html  hello-world.html  index.html  index.md
categories/: ai.xml  aws.xml  blog.xml  cat_nikola.xml  demo.xml  docker.xml  ec2.xml  hydra.xml  index.html  ml.xml  nikola.xml  python.xml  ray.xml  research.xml
cv/: index.html  index.rst
galleries/: index.html  rss.xml
jupyter-book/: bio.html  pubs.html
listings/: hello.py.html  index.html
pages/: Bio.rst  index.rst  pubs.rst
posts/: ec2_scaling_with_hydra.ipynb  hello-world.rst  neurips-reviews-2020.rst
pubs/: index.html  index.rst
templates/: page.tmpl  story.tmpl
(+88 files in other folders)
